<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffcccccc"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_uvs"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/uvs"
            android:textSize="20dp"/>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="80dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@color/colorWhite">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_connnect"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:textSize="20dp"
                android:textColor="@color/colorBLue"/>

            <EditText
                android:id="@+id/editLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:inputType="text"
                android:hint="@string/text_login"
                android:ems="10"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/text_mdp"
                android:ems="10"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btnEnvoyer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/btn_envoi"
                android:layout_gravity="center"/>



        </LinearLayout>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>